--- a/package.json
+++ b/package.json
@@ -2,43 +2,72 @@
   "name": "my-guitar-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.2.4",
+    "@hookform/resolvers": "^3.4.2",
+    "@ludovicm67/react-dotenv": "^1.0.7",
+    "@mui/material": "^5.15.18",
+    "@mui/x-data-grid": "^6.18.5",
+    "@mui/x-date-pickers": "^7.6.1",
+    "@phosphor-icons/react": "^2.1.5",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.7",
     "@types/react-dom": "^19.1.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "axios": "^1.7.0",
+    "classnames": "^2.5.1",
+    "firebase": "^11.9.1",
+    "framer-motion": "^12.17.0",
+    "lucide-react": "^0.514.0",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
+    "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
+    "react-easy-crop": "^5.0.8",
+    "react-feather": "^2.0.10",
+    "react-firebase-hooks": "^5.1.1",
+    "react-grid-layout": "^1.4.4",
+    "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.5.2",
+    "react-i18next": "^14.1.2",
+    "react-json-editor-ajrm": "^2.5.14",
+    "react-konva": "^18.2.10",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
+    "react-multi-carousel": "^2.8.5",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.30.1",
+    "react-xarrows": "^2.0.2",
+    "sass": "^1.77.2",
+    "sonner": "^2.0.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "use-image": "^1.1.1",
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/lodash": "^4.17.4",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@types/react-json-editor-ajrm": "^2.5.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^4.5.2",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "react-error-overlay": "^6.0.11",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.4.19"
   }
 }
